--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
 <body>
   <div id='header'>
     <% if signed_in? -%>
-      <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
+      <%= link_to t('.sign_out'), sign_out_path, :method => :delete %> |
+      <%= link_to "Your user page", user_path(current_user.id) %>
     <% else -%>
       <%= link_to t('.sign_in'), sign_in_path %>
     <% end -%>
