guest now being created with organization_id via form_for hidden_field

--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -6,6 +6,8 @@
   <%= f.label :email %>
   <%= f.text_field :email %>
 
+  <%= f.hidden_field :organization_id, value: @organization_id %>
+
   <%= f.submit %>
 
 <% end %>
