--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -3,12 +3,15 @@ Organizations Name: <%= @organization.name %>
 Admin: <%= User.find_by_id(@organization.admin_id).email %>
 <br/>
 <br/>
-<%= link_to "Open Guest Sign-In", new_guest_path  %>
+<%= link_to "Open Guest Sign-In", new_organization_guest_path(@organization.id)  %>
 <br/>
 <br/>
 <ul>
-  <%= @guests.each do |guest| %> 
-    <li> <%= guest.name %> </li><br/>
-    <li> <%= guest.email %> </li><br/>
+  <% @guests.each do |guest| %> 
+    <li><%= guest.name %> 
+        <br/>
+        <%= guest.email %> 
+    </li>
+    <br/>
   <% end %>
 </ul>
