--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,14 +2,14 @@
 <hr>
 <h3> spaces you are the sole manager of </h3>
 <ul>
-  <% @managed_spaces.each do |space| %>
+  <% @user.managed_spaces.each do |space| %>
     <li> <%= space.name %> | <%= link_to "manage this space", "#" %>
   <% end %>
 </ul>
 <hr>
 <h3> spaces you are a member of </h3>
 <ul>
-  <% @member_spaces.each do |space| %>
+  <% @user.member_spaces.each do |space| %>
     <li> <%= space.name %> | <%= link_to "view this space", organization_path(space.id) %>
   <% end %>
 </ul>
