--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -6,6 +6,8 @@ Admin: <%= User.find_by_id(@organization.admin_id).email %>
 <%= link_to "Open Guest Sign-In", new_organization_guest_path(@organization.id)  %>
 <br/>
 <br/>
+
+<h3> Guests Log: </h3>
 <ul>
   <% @organization.guests.each do |guest| %> 
     <li><%= guest.name %> 
@@ -13,5 +15,16 @@ Admin: <%= User.find_by_id(@organization.admin_id).email %>
         <%= guest.email %> 
     </li>
     <br/>
+  <% end %>
+</ul>
+
+<h3> Employees In The Space: </h3>
+<ul>
+  <% @organization.employees.each do |employee| %>
+    <li>
+      <%= employee.name %> <br/>
+      <%= employee.email %> | <%= employee.phone %> <br/>
+      <%= employee.company %>
+    </li>
   <% end %>
 </ul>
