font awesome working on splash page

--- a/app/views/static_pages/splash.haml
+++ b/app/views/static_pages/splash.haml
@@ -20,17 +20,17 @@
   .feature-box
     %h3 Email Notifications
     %br
-    %i.icon-envelope
+    %i.fa.fa-envelope
     %p.feature-paragraph They get a text or email saying their visitor is here.
   .feature-box
     %h3 Guest Metrics
     %br
-    %i.icon-bar-chart
+    %i.fa.fa-bar-chart-o
     %p.feature-paragraph Generate reports of all your visitors and their metrics.
   .feature-box
     %h3 Runs On Any Machine
     %br
-    %i.icon-tablet
+    %i.fa.fa-tablet
     / %i.icon-laptop
-    %i.icon-desktop 
+    %i.fa.fa-desktop 
     %p.feature-paragraph Have SignInEasy displayed on an iPad, Mac, PC, or anything with a screen and internet access.
