--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,17 +6,56 @@
   = stylesheet_link_tag 'application' 
 %body
   #header
-    -if signed_in?
-      = link_to t('.sign_out'), sign_out_path, :method => :delete  
-      |
-      = link_to "Your user page", user_path(current_user.id) 
-    -else
-      = link_to t('.sign_in'), sign_in_path 
 
+    %nav.navbar.navbar-default{:role => "navigation"}
+      / Brand and toggle get grouped for better mobile display
+      .navbar-header
+        %button.navbar-toggle{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+          %span.sr-only Toggle navigation
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        %a.navbar-brand{:href => "#"} SignInEasy
+      / Collect the nav links, forms, and other content for toggling
+      #bs-example-navbar-collapse-1.collapse.navbar-collapse
+        %ul.nav.navbar-nav
+
+        
+        %ul.nav.navbar-nav.navbar-right
+          
+          
+          -if signed_in?
+
+            %li.active
+              %a{:href => "#"} Dashboard
+
+            %li.dropdown
+              %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+                [User's Name]
+                %b.caret
+              %ul.dropdown-menu
+
+                %li
+                  = link_to "Settings", user_path(current_user.id) 
+                
+                %li.divider
+                %li
+                  = link_to t('.sign_out'), sign_out_path, :method => :delete 
+
+          -else
+
+            =# link_to t('.sign_in'), sign_in_path   
+            %button.btn.btn-default.navbar-btn{:type => "button"} Sign in
+
+
+      / /.navbar-collapse
+
+      
   #flash
-    -flash.each do |key, value|
-      =key
-      %br
-      =value
+  -flash.each do |key, value|
+    =key
+    %br
+    =value
+
 
   = yield
