added dashboard page to be the default page when a user logs in

--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -6,7 +6,7 @@
     %br
     %h1 
       Thanks for Signing In Easy, 
-      / = @guest.name
+      = @guest.name
     %br  
     %h3 If you are visiting someone, they have been notified you're here.
     %h3 (You also got a cool e-mail with wifi information and our user policies)
