--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -29,6 +29,9 @@
             %li.active
               %a{:href => "#"} Dashboard
 
+            %li
+              = link_to "Start Guest Module", new_organization_guest_path
+
             %li.dropdown
               %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
                 [User's Name]
