adding buttons, more inputs to guest form

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -1,34 +1,48 @@
 
+.row.top-logo-container
+  =image_tag("your_business_logo_here_small.png")
 
-%form.col-lg-4{:role => "form"}
+.row.btn-grid
+  .form-navigation
+    %a(href="/meeting_form")
+      %button(type="submit" class="btn btn-primary")
+        %i.icon-calendar.icon-white
+        Scheduled Meeting
+    %a(href="/tour_form")
+      %button(type="submit" class="btn btn-primary")
+        %i.icon-map-marker.icon-white
+        Scheduled Tour
+    %a(href="/event_form")
+      %button(type="submit" class="btn btn-primary")
+        %i.icon-group.icon-white 
+        Scheduled Event
+    %a(href="/information_form")
+      %button(type="submit" class="btn btn-primary")
+        %i.icon-envelope.icon-white#guest-icon-envelope 
+        More Information
+    
+  .logo-container
+    =image_tag("SignInEasyLogo-bottom.png")        
+
+/ .form-holder
+/   = render 'form'
+
+
+
+
+= simple_form_for(@guest, :html => { :class => 'form-horizontal' }) do |f| 
+  .form-group.col-xs-4	
+    = f.input :name, :input_html => { :class => 'form-control input-lg' }, :hint => "add your article title here", :placeholder => "ex: John Smith"
+  .form-group.col-xs-4
+    = f.input :email, :input_html => { :class => 'form-control input-lg' }, :hint => "add your article title here", :placeholder => "ex: johnsmith@gmail.com"
   .form-group
-    %label{:for => "exampleInputEmail1"} Email address
-    %input#exampleInputEmail1.form-control{:placeholder => "Enter email", :type => "email"}
+    = f.hidden_field :organization_id, value: @organization_id 
+  .form-group.col-xs-4
+    = f.input :name, :input_html => { :class => 'form-control input-lg' }, :hint => "Who are you hear to see? Start typing their name", :placeholder => "ex: John Smith"  
+  .form-group  
+    = f.submit 'Register', :class => 'btn btn-primary'
+    = submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger"
 
-  .form-group
-    %label{:for => "exampleInputPassword1"} Password
-    %input#exampleInputPassword1.form-control{:placeholder => "Password", :type => "password"}
-
-  .form-group
-    %label{:for => "exampleInputFile"} File input
-    %input#exampleInputFile{:type => "file"}
-      %p.help-block Example block-level help text here.
-  .checkbox
-    %label
-      %input{:type => "checkbox"}
-        Check me out
-  %button.btn.btn-default{:type => "submit"} Submit
+%br
 
 
-
-= form_for @guest do |f| 
-
-  = f.label :name 
-  = f.text_field :name 
-
-  = f.label :email 
-  = f.text_field :email 
-
-  = f.hidden_field :organization_id, value: @organization_id 
-
-  = f.submit 
