--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -5,19 +5,19 @@
 .row.btn-grid
   .form-navigation
     %a(href="/meeting_form")
-      %button(type="submit" class="btn btn-primary")
+      %button(type="submit" class="btn btn-primary btn-lg")
         %i.icon-calendar.icon-white
         Scheduled Meeting
     %a(href="/tour_form")
-      %button(type="submit" class="btn btn-primary")
+      %button(type="submit" class="btn btn-primary btn-lg")
         %i.icon-map-marker.icon-white
         Scheduled Tour
     %a(href="/event_form")
-      %button(type="submit" class="btn btn-primary")
+      %button(type="submit" class="btn btn-primary btn-lg")
         %i.icon-group.icon-white 
         Scheduled Event
     %a(href="/information_form")
-      %button(type="submit" class="btn btn-primary")
+      %button(type="submit" class="btn btn-primary btn-lg")
         %i.icon-envelope.icon-white#guest-icon-envelope 
         More Information
     
@@ -31,17 +31,17 @@
 
 
 = simple_form_for(@guest, :html => { :class => 'form-horizontal' }) do |f| 
-  .form-group.col-xs-4	
+  .form-group	
     = f.input :name, :input_html => { :class => 'form-control input-lg' }, :hint => "add your article title here", :placeholder => "ex: John Smith"
-  .form-group.col-xs-4
+  .form-group
     = f.input :email, :input_html => { :class => 'form-control input-lg' }, :hint => "add your article title here", :placeholder => "ex: johnsmith@gmail.com"
   .form-group
     = f.hidden_field :organization_id, value: @organization_id 
-  .form-group.col-xs-4
+  .form-group
     = f.input :name, :input_html => { :class => 'form-control input-lg' }, :hint => "Who are you hear to see? Start typing their name", :placeholder => "ex: John Smith"  
   .form-group  
-    = f.submit 'Register', :class => 'btn btn-primary'
-    = submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger"
+    = f.submit 'Register', :class => 'btn btn-success btn-lg'
+    = submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger btn-lg"
 
 %br
 
