--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -5,39 +5,30 @@ Index
 
 
 
-.table.table-striped
+%table.table-striped
   %thead
     %tr
       %th
-      =# model_class.human_attribute_name(:name)
       %th
-      =# model_class.human_attribute_name(:email)
       %th
-      =# model_class.human_attribute_name(Employee)
       %th
-      =# model_class.human_attribute_name(:part_of_tour)
       %th Visiting Reason
-      %th
-      =# model_class.human_attribute_name(Date)
-      %th
-      =# model_class.human_attribute_name(Time)
-      %th
-      = t '.actions', :default => t("helpers.actions")
+      %th 
+      %th 
+      %th 
 
   %tbody
-    = @guests.each do |guest|
+    - @guests.each do |guest|
       %tr
+        %td 
+          = guest.name
+        %td 
+          = guest.email
         %td
-        = guest.name
+        %td  
+        %td 
+        %td 
+          = guest.created_at.strftime("%b. %d\, %Y")
+        %td 
+          = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td
-        = guest.email
-        %td
-        %td
-        =# guest.convert_part_of_tour_to_yes_and_no
-        %td
-        =# guest.visiting_reason
-        %td
-        = guest.created_at.strftime("%b. %d\, %Y")
-        %td
-        = guest.created_at.in_time_zone.strftime(" %I:%M %p")
-        %td>
