updated org show page

--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -1,5 +1,5 @@
 .page-header
-  %h1
+  %h1 Visitor Log
 
 %table.table.table-striped.table-hover
   %thead
@@ -32,5 +32,6 @@
         %td
         %td
         %td
+%hr
 
 = link_to 'new', new_organization_guest_path, :class => 'btn btn-primary'
