--- a/app/views/organizations/show.haml
+++ b/app/views/organizations/show.haml
@@ -2,21 +2,50 @@ Organizations Name:
 = @organization.name 
 %br
 Admin: 
-= User.find_by_id(@organization.admin_id).email 
+= User.find_by_id(@organization.admin_id) #removed .email appended to this due to error
 %br
 %br
 = link_to "Open Guest Sign-In", new_organization_guest_path(@organization.id)  
 %br
 %br
 
-%h3 Guests Log:
-%ul
-  -@organization.guests.each do |guest|  
-    %li
-      = guest.name  
-      %br
-      = guest.email  
-    %br
+
+.page-header
+  %h1 Visitor Log
+
+%table.table.table-striped.table-hover
+  %thead
+    %tr
+      %th Name
+      %th Email
+      %th Another Data Point
+      %th Another Data Point
+      %th Visiting Reason
+      %th Date
+      %th Time
+      %th 
+      %th Show
+      %th Delete
+
+  %tbody
+    - @organization.guests.each do |guest|
+      %tr
+        %td 
+          = guest.name
+        %td 
+          = guest.email
+        %td
+        %td  
+        %td 
+        %td 
+          = guest.created_at.strftime("%b. %d\, %Y")
+        %td 
+          = guest.created_at.in_time_zone.strftime(" %I:%M %p")
+        %td
+        %td
+        %td
+%hr
+
 
 %h3 Employees In The Space:
 %ul
@@ -29,3 +58,4 @@ Admin:
       = employee.phone  
       %br
       = employee.company 
+=# link_to 'new', new_organization_guest_path, :class => 'btn btn-primary'
