made the dashboard page the main page after a user logs in, added visitor registratio link

--- a/app/views/static_pages/dashboard.haml
+++ b/app/views/static_pages/dashboard.haml
@@ -1,5 +1,6 @@
-%ul.nav.nav-tabs.nav-justified
-  %li Guest Log
-  %li Companies
-  %li Employees
-  %li One More 
+%h1 A Dashboard of Information
+%br
+= link_to "Open Visitor Registration Module", new_organization_guest_path, :class => 'btn btn-lg btn-success' #removed (@organization.id)
+%br
+This starts the public facing visitor registration program
+%br
