updated organization show page (to eventually have a tabbed interface) and misc others

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -43,7 +43,9 @@
                 %ul.dropdown-menu
 
                   %li
-                    = link_to "Settings", user_path(current_user.id) 
+                    %a{:href => "#"} Settings
+                  %li
+                    = link_to "Profile", user_path(current_user.id) 
                 
                   %li.divider
                   %li
