--- a/app/views/organizations/show.haml
+++ b/app/views/organizations/show.haml
@@ -4,14 +4,11 @@ Organizations Name:
 Admin: 
 = User.find_by_id(@organization.admin_id) #removed .email appended to this due to error
 %br
-%br
-= link_to "Open Guest Sign-In", new_organization_guest_path(@organization.id)  
-%br
-%br
 
+/ visitors information
 
 .page-header
-  %h1 Visitor Log
+  %h1 Visitors
 
 %table.table.table-striped.table-hover
   %thead
@@ -46,16 +43,78 @@ Admin:
         %td
 %hr
 
+%br
 
-%h3 Employees In The Space:
-%ul
-  -@organization.employees.each do |employee| 
-    %li
-      = employee.name  
-      %br
-      = employee.email  
-      | 
-      = employee.phone  
-      %br
-      = employee.company 
-=# link_to 'new', new_organization_guest_path, :class => 'btn btn-primary'
+.page-header
+  %h1 Members
+
+%table.table.table-striped.table-hover
+  %thead
+    %tr
+      %th Name
+      %th Email
+      %th Phone
+      %th Company
+      %th Data Point 1
+      %th Data Point 2
+      %th Data Point 3
+      %th 
+      %th Show
+      %th Delete
+
+  %tbody
+    - @organization.employees.each do |employee|
+      %tr
+        %td 
+          =#
+        %td 
+          =#
+        %td
+        %td  
+        %td 
+        %td 
+          =# guest.created_at.strftime("%b. %d\, %Y")
+        %td 
+          =# guest.created_at.in_time_zone.strftime(" %I:%M %p")
+        %td
+        %td
+        %td
+%hr
+
+%br
+
+.page-header
+  %h1 Companies
+
+%table.table.table-striped.table-hover
+  %thead
+    %tr
+      %th Name
+      %th Email
+      %th Phone
+      %th Company
+      %th Data Point 1
+      %th Data Point 2
+      %th Data Point 3
+      %th 
+      %th Show
+      %th Delete
+
+  %tbody
+    - @organization.employees.each do |employee|
+      %tr
+        %td 
+          =#
+        %td 
+          =#
+        %td
+        %td  
+        %td 
+        %td 
+          =# guest.created_at.strftime("%b. %d\, %Y")
+        %td 
+          =# guest.created_at.in_time_zone.strftime(" %I:%M %p")
+        %td
+        %td
+        %td
+%hr
