buttons are centered and large

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -33,7 +33,18 @@
   position: fixed
   margin-left: -97.5px
   top: 25px
-  left: 50% 
+  left: 50%
+
+.btn-xxlg
+  margin: 20px 20px 20px 20px
+  padding: 5px
+  height: 150px
+  min-width: 340px
+  font-size: 35px
+  line-height: normal
+  -webkit-border-radius: 8px
+  -moz-border-radius: 8px
+  border-radius: 8px  
 
 #guest-form-input-name, #guest-form-input-email, #employee_autcomplete
   font-size: 24pt
