--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -10,27 +10,27 @@
   %br
   .form-navigation
     %a(href="/meeting_form")
-      %button(type="submit" class="btn btn-primary btn-lg")
+      %button(type="submit" class="btn btn-primary btn-xxlg")
         %i.icon-calendar.icon-white
-        Scheduled Meeting
+        Meeting
     %a(href="/meeting_form")
-      %button(type="submit" class="btn btn-primary btn-lg")
+      %button(type="submit" class="btn btn-primary btn-xxlg")
         %i.icon-calendar.icon-white
         Drop In    
     %a(href="/tour_form")
-      %button(type="submit" class="btn btn-primary btn-lg")
+      %button(type="submit" class="btn btn-primary btn-xxlg")
         %i.icon-map-marker.icon-white
         Tour
     %a(href="/event_form")
-      %button(type="submit" class="btn btn-primary btn-lg")
+      %button(type="submit" class="btn btn-primary btn-xxlg")
         %i.icon-group.icon-white 
         Event
     %a(href="/meeting_form")
-      %button(type="submit" class="btn btn-primary btn-lg")
+      %button(type="submit" class="btn btn-primary btn-xxlg")
         %i.icon-calendar.icon-white
-        Scheduled Meeting    
+        Meeting    
     %a(href="/meeting_form")
-      %button(type="submit" class="btn btn-primary btn-lg")
+      %button(type="submit" class="btn btn-primary btn-xxlg")
         %i.icon-calendar.icon-white
         Other 
     
