--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -8,14 +8,14 @@
   background: white
   border-top: none
 
-  .guest-form
-    width: 860px
-    margin: 100px auto
+.guest-form
+  width: 860px
+  margin: 100px auto
 
-  .form-holder
-    width: 960px
-    margin: 0 auto
-    display: none
+.form-holder
+  width: 960px
+  margin: 0 auto
+  display: none
 
 .btn-grid
   position: relative
@@ -38,8 +38,9 @@
 .btn-xxlg
   margin: 20px 20px 20px 20px
   padding: 5px
-  height: 150px
-  min-width: 340px
+  height: 75% 
+  /* 150px */
+  min-width: 25%
   font-size: 35px
   line-height: normal
   -webkit-border-radius: 8px
