--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -8,18 +8,11 @@
   background: white
   border-top: none
 
-.guest-form
-  width: 860px
-  margin: 100px auto
-
-.form-holder
-  width: 960px
-  margin: 0 auto
-  display: none
+/* Button Styling */
 
 .btn-grid
   position: relative
-  top: 100px
+  top: 160px
   bottom: 100px
   text-align: center
 
@@ -38,14 +31,15 @@
 .btn-xxlg
   margin: 20px 20px 20px 20px
   padding: 5px
-  height: 75% 
-  /* 150px */
+  height: 150px
   min-width: 25%
   font-size: 35px
   line-height: normal
   -webkit-border-radius: 8px
   -moz-border-radius: 8px
   border-radius: 8px  
+
+
 
 #guest-form-input-name, #guest-form-input-email, #employee_autcomplete
   font-size: 24pt
