added font awesome icons to buttons

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -10,6 +10,12 @@
 
 /* Button Styling */
 
+.btn-grid-center
+  position: absolute
+  left: 50%
+  top: 50%
+  transform: translate(-50%, -50%)
+
 .btn-grid
   position: relative
   top: 160px
@@ -39,7 +45,9 @@
   -moz-border-radius: 8px
   border-radius: 8px  
 
-
+.navbar-visitor-ui.navbar-default
+  background-color: #FFF
+  border-color: #FFF
 
 #guest-form-input-name, #guest-form-input-email, #employee_autcomplete
   font-size: 24pt
