--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -11,27 +11,27 @@
   .form-navigation
     %a(href="/meeting_form")
       %button(type="submit" class="btn btn-primary btn-xxlg")
-        %i.icon-calendar.icon-white
+        %i.fa.fa-calendar.icon-white
         Meeting
     %a(href="/meeting_form")
       %button(type="submit" class="btn btn-primary btn-xxlg")
-        %i.icon-calendar.icon-white
+        %i.fa.fa-user.icon-white
         Drop In    
     %a(href="/tour_form")
       %button(type="submit" class="btn btn-primary btn-xxlg")
-        %i.icon-map-marker.icon-white
+        %i.fa.fa-location-arrow.icon-white
         Tour
     %a(href="/event_form")
       %button(type="submit" class="btn btn-primary btn-xxlg")
-        %i.icon-group.icon-white 
+        %i.fa.fa-group.icon-white 
         Event
     %a(href="/meeting_form")
       %button(type="submit" class="btn btn-primary btn-xxlg")
-        %i.icon-calendar.icon-white
-        Meeting    
+        %i.fa.fa-info-circle.icon-white
+        Information    
     %a(href="/meeting_form")
       %button(type="submit" class="btn btn-primary btn-xxlg")
-        %i.icon-calendar.icon-white
+        %i.fa.fa-question.icon-white
         Other 
     
 .row  
