--- a/app/views/layouts/visitor_ui.haml
+++ b/app/views/layouts/visitor_ui.haml
@@ -8,7 +8,7 @@
     %meta(name="viewport" content="width=device-width initial-scale=1.0")
   %body
     .container
-      .navbar.navbar-fixed-top
+      .navbar.navbar-fixed-top.navbar-visitor-ui
         .nav-collapse.collapse
           %ul.nav.pull-right        
             %li
