removed nav bar off guests/new page

--- a/app/views/layouts/visitor_ui.haml
+++ b/app/views/layouts/visitor_ui.haml
@@ -13,7 +13,7 @@
           %ul.nav.pull-right        
             %li
               %a(href='/guests')
-                %i.icon-home.icon-black.guest-reg-home-icon
+                %i.fa.fa-cog.icon-black
       -if notice
         %p.notice
           = notice
