--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -45,9 +45,17 @@
   -moz-border-radius: 8px
   border-radius: 8px  
 
-.navbar-visitor-ui.navbar-default
+.navbar-visitor-ui
   background-color: #FFF
   border-color: #FFF
+  background-image: none
+  background: transparent
+  box-shadow: none
+  -webkit-box-shadow: none
+  border: none
+
+.navbar-inner
+
 
 #guest-form-input-name, #guest-form-input-email, #employee_autcomplete
   font-size: 24pt
