added cog icon in upper right hand corner

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -34,6 +34,11 @@
   top: 25px
   left: 50%
 
+.visitor-ui-home-icon
+  position: fixed
+  top: 5px
+  right: 5px
+
 .btn-xxlg
   margin: 20px 20px 20px 20px
   padding: 5px
@@ -46,8 +51,6 @@
   border-radius: 8px  
 
 .navbar-visitor-ui
-  background-color: #FFF
-  border-color: #FFF
   background-image: none
   background: transparent
   box-shadow: none
