--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -2,7 +2,11 @@
   .row
     .organization-logo-container
       =image_tag("your_business_logo_here_small.png")
+    .visitor-ui-home-icon
+      =link_to '', organization_static_pages_dashboard_path
+      %i.fa.fa-cog.icon-black
 
+      
 
 .row.btn-grid
   %br
