added transparentcy to entire nav bar. Made nav bar fixed.

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -35,7 +35,7 @@
         Information    
     %a(href="/meeting_form")
       %button(type="submit" class="btn btn-primary btn-xxlg")
-        %i.fa.fa-question.icon-white
+        %i.fa.fa-question-circle.icon-white
         Other 
     
 .row  
