--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -1,6 +1,6 @@
-
-/ .top-logo-container
-/   =image_tag("your_business_logo_here_small.png")
+  .row
+    .organization-logo-container
+      =image_tag("your_business_logo_here_small.png")
 
   .show-page-text
     %br
@@ -12,8 +12,11 @@
     %h3 (You also got a cool e-mail with wifi information and our user policies)
     %br
     %p Redirecting back to the registration page in a moment...
-    = link_to "or go now", new_guest_url, id: "link"
+    = link_to "or go now", new_guest_path, id: "link"
 
+.row  
+  .bottom-logo-container
+    =image_tag("SignInEasyLogo-bottom.png")    
 
 :javascript
 // redirect to new guest page after 4 seconds
