shortened guest form field inputs, centered buttons

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -57,7 +57,8 @@
   -webkit-box-shadow: none
   border: none
 
-.navbar-inner
+.center-buttons
+  text-align: center
 
 
 #guest-form-input-name, #guest-form-input-email, #employee_autcomplete
