--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -38,9 +38,16 @@
         %i.fa.fa-question-circle.icon-white
         Other
     
-    = button_to('Meeting', organization_guests_new_with_host_path, :class => 'btn btn-primary btn-xxlg')
+    =# button_to('Meeting', organization_guests_new_with_host_path, :class => 'btn btn-primary btn-xxlg')
 
 
+.col-lg-6.col-lg-offset-3
+  .form_with_host
+    = render :partial => 'form_with_host'
+
+.col-lg-6.col-lg-offset-3
+  .form_without.host
+    = render :partial => 'form_without_host'
 
 .row  
   .bottom-logo-container
