--- a/app/views/guests/_form_without_host.haml
+++ b/app/views/guests/_form_without_host.haml
@@ -5,11 +5,8 @@
     = f.input :name, :input_html => { :class => 'form-control input-lg' }, :hint => "Enter your company name", :placeholder => "ex: 1871 // Visitor's Company Name (Can be blank)"
   .form-group
     = f.input :email, :input_html => { :class => 'form-control input-lg' }, :hint => "add your article title here", :placeholder => "ex: johnsmith@gmail.com (Visitor Email Address)"
-
-
   .form-group
     = f.hidden_field :organization_id, value: @organization_id 
-
-  .form-group  
+  .form-group.center-buttons.span-3  
     = f.submit 'Register', :class => 'btn btn-success btn-lg'
-    = submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger btn-lg"
+    = submit_tag 'Cancel', :type => :reset, :class => "btn btn-default btn-lg"
