completing rollback on forms for visitor registration

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -19,7 +19,7 @@
 .btn-grid
   position: relative
   top: 100px
-  bottom: 100px
+  /* bottom: 100px
   text-align: center
 
 .bottom-logo-container
@@ -71,6 +71,7 @@
 .center-buttons
   text-align: center
 
+.form-host
 
 #guest-form-input-name, #guest-form-input-email, #employee_autcomplete
   font-size: 24pt
