misc updates to get forms correct

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -42,7 +42,7 @@
 	
 
 .form-host
-  .col-lg-6.col-lg-offset-3
+  .col-lg-6.col-lg-offset-3.col-md-6.col-med-offset-3
     = render :partial => 'form_with_host'
 
   .col-lg-6.col-lg-offset-3
