--- a/app/views/guests/_form_without_host.haml
+++ b/app/views/guests/_form_without_host.haml
@@ -15,7 +15,7 @@
   
   .form-group
     = f.label :name, "Name"
-    = f.text_field :name, :class => 'form-control input-lg', :hint => 'Enter your first and last name', :placeholder => 'ex: John Smith', :required => ""
+    = f.text_field :name, :class => 'form-control input-lg', :hint => "Enter your first and last name", :placeholder => 'ex: John Smith', :required => ""
 
   .form-group
     = f.label :name, "Company Name"
