font awesome edit and delete itcons in

--- a/app/views/admin/show.haml
+++ b/app/views/admin/show.haml
@@ -17,5 +17,7 @@
               -important_attributes(obj).each do |key, value|
                 %td
                   = value
-              %td Edit
-              %td Delete
+              %td 
+                %i.fa.fa-edit
+              %td
+                %i.fa.fa-times
