fixed all forms and removed all simple_form

--- a/app/views/passwords/new.haml
+++ b/app/views/passwords/new.haml
@@ -7,8 +7,8 @@
     = t '.description'
 
 
-    = simple_form_for(:password, :url => passwords_path, :html => { :class => 'form form-horizontal' }) do |form|
+    = form_for(:password, :url => passwords_path, :html => { :class => 'form-horizontal' }) do |form|
       .form-group
-        = form.input :email, :input_html => { :class => 'form-control' }, :placeholder => "Email address", :required => "", :type => "text"
+        = form.email_field :email, :class => 'form-control', :placeholder => "Email address", :required => "", :type => "text"
       .form-group
         = form.submit "Reset password", :class => 'btn btn-default'
