delete link input for objects

--- a/app/views/admin/show.haml
+++ b/app/views/admin/show.haml
@@ -20,4 +20,4 @@
               %td 
                 %i.fa.fa-edit
               %td
-                %i.fa.fa-times
+                <a href="http://localhost:3000/#{delete_url(obj)}" method="delete"><i class="fa fa-times"></i></a>
